# PresenceKit

./: .gitignore  AA1先看说明书正式版README.md  AA1安装并启动.bat  AA2鉴权初始化.bat  AA3启动.bat  AA更新.bat  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX.md  DESIGN.md  HANDOFF.md  README.md  README.zh-CN.md  codex_prompt_prompt_leak_fix.md  config.example.yaml  config.yaml.example  gemini-code-1783998362885.html  main.py  pyproject.toml  requirements.txt  watchdog_napcat.bat  启动测试模式.bat  记忆架构审计与重构建议.md  记忆重构-P0施工单.md
admin/: admin_server.py  auth.py  log_filter.py
cc-tasks/: 00b-交接20260712-四系列现状与后续指南.md  00c-研究备忘-prompt对模型输出的影响.md  00d-研究备忘-长期记忆Fragment-Event聚合评估.md  00e-审计-孤立与半成品功能清单.md  00f-讨论备忘-主体性方向与架构现状核对.md  100-群聊梦境DreamStage后端v1.md  101-修复干净机子入梦409-去除梦境字面角色闸.md  102-P3裁剪后layers重算.md  103-PB4到期收割PathB.md  104-新用户冷启动体验.md  105-ACT2流式反坍缩设计与实现.md  107-批量工单-12项问题修复与改进.md  108-事件总线统一-决策与施工单.md  109-工具系统演进与人机直连-决策与施工单.md  110-MCP管理面板与URL导入.md  115-MCP连接跨task生命周期崩溃-止血与根治.md  116-小活批次-接口UI校验与根目录素材整理.md  117-工具循环观测面板.md  118-梦境破限与世界书解耦.md  119-给codex-admin面板HTML分块.md  120-工具循环二次调用兜底-尾部花括号方案.md  121-梦境世界包加载器测试隔离根因与方案.md  20-句级表演意图映射-后端.md  22-pytest遗留失败修复决策.md  24-破限条目注入修复-反坍缩长短挡-动向按角色.md  33-安全P0-admin鉴权与绑定修复.md  43-下棋活动后端-输出清洗-观测-记忆注入-主动评论-风格tilt.md  44-记忆评测基线-memeval.md  45-事实更新语义-add-update-noop.md  46-遗忘降级-淘汰压缩与事件日志抢救.md  47-记忆稳定性小修-召回增强预算与identity反证衰减.md  48-查询侧时间意图-召回时间过滤.md  49-闲时整合pass-记忆管家.md  50-stage仲裁观测-arbiter-trace.md  50-测试清理-退役审计快照-守卫加固-代际合并.md  51-stage回声坍缩防护-transcript脱敏与链上掐断.md  52-stage仲裁信号升级-呼格问句与关键词派生.md  53-stage沉默合法回合.md  54-coplay启用链路修缮-反坍缩增强-日志清洗.md  (+42 more)
docs/: dream.md  (+55 more)
(+492 files in other folders)
